# high-level-gdnative

./: .editorconfig  .gitmodules  Doxyfile  README.md  gdnhlc.h  hgdn.h
docs/: annotated.html  bc_s.png.import  bdwn.png.import  classes.html  closed.png.import  doc.png.import  doxygen.svg.import  examples.html  files.html  folderclosed.png.import  folderopen.png.import  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__args__get.html  group__array.html  group__array__get.html  group__assert.html  group__custom__math__types.html  group__dictionary.html  group__dictionary__get.html  group__global.html  group__init.html  group__init__deinit.html  group__memory.html  group__nativescript.html  group__new__variant.html  group__object.html  group__pool__array__wrapper.html  group__print.html  group__string.html  group__string__wrapper.html  group__variant__get.html  group__wrap__variant.html  hgdn_8h.html  hgdn_8h_source.html  (+51 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  close.svg.import  defines_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_9.js  groups_a.js  mag_sel.svg.import  pages_0.js  search_l.png.import  search_m.png.import  search_r.png.import  (+8 more)
example/: .gitignore  CMakeLists.txt  Node.tscn  Test.gd  example.c  example_gdnativelibrary.tres  project.godot
